# binary-wheel

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  binarywheel.hpp  bw-gen-cpp  cpp.coffee  cpp.js  index.coffee  package.json
test/: makefile  test.coffee  test.cpp  testtypes.coffee
